--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ td { vertical-align:middle; border:1px; border-style:inset; border-width:2px; bo
 #table-body th { text-align:center; vertical-align:center; border: 1px; border-style:outset; border-width:1px; border-color:#000000; }
 #table-body tr { vertical-align:middle; border:2px; border-color:#000000; }
 #table-body td { vertical-align:middle; border:1px; border-style:inset; border-width:2px; border-color:#000000; padding:none; text-align:center; }
-#table-links table { background-color: #ffffff; width: 500; table-layout: fixed; border: 2px; text-align:center; border-color: #9999cc; border-style: outset; border-spacing: 1px; border-collapse: seperate; padding: none; word-wrap: break-word; margin-left:auto; margin-right:auto; }
+#table-links table { font-family: "Times New Roman", Times, serif; background-color: #ffffff; width: 500; table-layout: fixed; border: 2px; text-align:center; border-color: #9999cc; border-style: outset; border-spacing: 1px; border-collapse: seperate; padding: none; word-wrap: break-word; margin-left:auto; margin-right:auto; }
 #table-links th { text-align:center; margin-top: -20px; padding: none; vertical-align:center; border: 1px; border-style:outset; border-width:1px; border-color:#000000; position:relative; }
 #table-links tr { height: 45px; vertical-align:middle; border:2px; border-color:#f2f2f2; }
 #table-links td { font-family: "Times New Roman", Times, serif; vertical-align:middle; border:1px; border-style:inset; border-width:2px; border-color:#000000; padding: 5px; text-align:center; }
