--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,9 @@ td { vertical-align:middle; border:1px; border-style:inset; border-width:2px; bo
 #table-links th { text-align:center; margin-top: -20px; padding: none; vertical-align:center; border: 1px; border-style:outset; border-width:1px; border-color:#000000; position:relative; }
 #table-links tr { height: 45px; vertical-align:middle; border:2px; border-color:#f2f2f2; }
 #table-links td { font-family: "Times New Roman", Times, serif; vertical-align:middle; border:1px; border-style:inset; border-width:2px; border-color:#000000; padding: 5px; text-align:center; }
+#table-edits table { border: 0px solid black; border-collapse: collapse; vertical-align:middle; border-color: white; border-spacing: 2px; }
+#table-edits th { border: 0px solid black; border-collapse: collapse; text-align: center; vertical-align:middle; }
+#table-edits td { border: 0px solid black; border-collapse: collapse; padding: 5px; text-align: center; vertical-align: center; }
 .cascade { display: none; }
 .button { background-color: #f44336; /* Red */ }
 .btn-danger { color: #fff; background-color: #d9534f; border-color: #d43f3a; }
